# vault-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md  SECURITY.md  build.rs  deny.toml  dist-workspace.toml
.claude/skills/changelog/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml
.vault/: config.yaml
crates/vault-cache/: Cargo.toml
crates/vault-cache/src/: change_detection.rs  error.rs  find.rs  identity.rs  invalidation.rs  lib.rs  live_examples.rs  lock.rs  open.rs  query.rs  query_diagnostics.rs  query_documents.rs  query_files.rs  query_links.rs  query_show.rs  reader.rs  schema.rs  status.rs  writer.rs
crates/vault-cache/tests/: concurrency.rs  find_property.rs  perf.rs  property.rs  query_property.rs
crates/vault-cli/: Cargo.toml  build.rs
crates/vault-cli/src/: cache.rs  cache_cmd.rs  cli.rs  config.rs  config_loader.rs  delete_doc.rs  filter.rs  filter_args.rs  frontmatter.rs  link_repair.rs  main.rs  move_doc.rs  mutation_report.rs  output.rs  prompt.rs  query.rs  registry.rs  repair_apply.rs  standards.rs  target.rs  validate.rs  validate_filter.rs
crates/vault-cli/src/cache/: find.rs  query.rs  query_documents.rs
crates/vault-cli/src/completions/: mod.rs
crates/vault-cli/src/completions/install/: bash.rs  elvish.rs  fish.rs  mod.rs  nushell.rs  powershell.rs  zsh.rs
crates/vault-cli/src/config/: migrate.rs  show.rs  validate.rs
crates/vault-cli/src/count/: mod.rs  render.rs
crates/vault-cli/src/find/: mod.rs  query.rs  render.rs
crates/vault-cli/src/frontmatter/: offsets.rs  quote.rs
crates/vault-cli/src/graph/: build.rs
crates/vault-cli/src/help/: bin_name.rs  examples.rs  extract.rs  find_live.rs  mod.rs  model.rs  render.rs
crates/vault-cli/src/links/: wikilink.rs
crates/vault-cli/src/new/: mod.rs  report.rs  synth.rs
crates/vault-cli/src/output/: glyphs.rs  legacy.rs  mod.rs  pager.rs  palette.rs  primitives.rs
crates/vault-cli/src/repair/: apply_render.rs  mod.rs  render.rs  skip_reasons.rs
crates/vault-cli/src/self_update/: download.rs  manifest.rs  mod.rs  receipt.rs  render.rs  resolve.rs  swap.rs
crates/vault-cli/src/set/: mod.rs  report.rs  synth.rs  validate.rs
crates/vault-cli/src/show/: mod.rs  render.rs  target.rs
crates/vault-cli/src/standards/: apply.rs  checks.rs  config.rs  defaults.rs  engine.rs  findings.rs  path_match.rs  predicates.rs  repair.rs  summary.rs
crates/vault-cli/src/standards/repair/: closest_match.rs  destination.rs  link_risk.rs  warnings.rs
crates/vault-cli/src/validate/: render.rs
crates/vault-cli/tests/: cli_output.rs  count_command.rs  delete_command.rs  get_command.rs  graph_output.rs  help_live_examples.rs  help_output.rs  move_command.rs  repair_apply_out_orthogonality.rs  repair_apply_stdin.rs  repair_plan_format_rejection.rs  repair_plan_out_orthogonality.rs  repair_plan_paths_format.rs  repair_plan_report_format.rs  repair_plan_skip_reason.rs  replace_body_pass.rs  set_smoke.rs  show_command.rs  validate_links_parity.rs
crates/vault-core/: Cargo.toml
crates/vault-frontmatter/: Cargo.toml
crates/vault-graph/: Cargo.toml
crates/vault-graph/src/: graph.rs  lib.rs  pattern.rs
crates/vault-index/: Cargo.toml
crates/vault-index/src/: cache.rs  config.rs  frontmatter.rs  graph.rs  lib.rs  links.rs
crates/vault-standards/: Cargo.toml
crates/vault-standards/src/: apply.rs  checks.rs  config.rs  config_schema.rs  defaults.rs  engine.rs  findings.rs  lib.rs  predicates.rs  repair.rs  substitution.rs  summary.rs
crates/vault-standards/src/repair/: destination.rs  link_risk.rs  warnings.rs
docs/: agent-workflows.md  cache.md  commands.md  concepts.md  configuration.md  development.md  installation.md  quickstart.md  releases.md  rule-shape.md  validation.md
examples/: README.md  config-minimal.yaml  config-typed-notes.yaml  repair-recipe.sh
fixtures/basic/: Front Target.md  alpha.md  beta.md  broken-frontmatter.md  duplicate.md  frontmatter-source.md
integrations/agent-skill/: README.md  SKILL.md
src/: applier.rs  apply_report.rs  cache.rs  cache_cmd.rs  cli.rs  config_loader.rs  delete_doc.rs  filter_args.rs  graph.rs  init.rs  main.rs  migrate_cmd.rs  migration_plan.rs  move_doc.rs  mutation_report.rs  repair_apply.rs  rewrite_wikilink_cmd.rs  standards.rs  validate_filter.rs
src/cache/: error.rs  find.rs  identity.rs  live_examples.rs  open.rs  query.rs  query_documents.rs  query_show.rs  status.rs  writer.rs
src/config/: edit.rs  migrate.rs  mod.rs  show.rs  validate.rs
src/count/: mod.rs  render.rs
src/find/: mod.rs  query.rs  render.rs
src/frontmatter/: offsets.rs  quote.rs
src/help/: bin_name.rs  examples.rs  extract.rs  find_live.rs  mod.rs  model.rs  plan_example.rs  render.rs
src/links/: resolve.rs
src/mutation_lock/: mod.rs  pending.rs
src/new/: mod.rs  report.rs  synth.rs  validate.rs
src/output/: mod.rs  palette.rs  primitives.rs  projection.rs
src/planner/: mod.rs
src/planner/findings/: mod.rs
src/repair/: apply_render.rs  mod.rs  render.rs
src/self_update/: download.rs  manifest.rs  mod.rs  receipt.rs  render.rs
src/set/: mod.rs  report.rs  synth.rs  validate.rs
src/show/: mod.rs  render.rs  target.rs
src/standards/: apply.rs  config.rs  defaults.rs  path_match.rs  repair.rs  substitution.rs
src/validate/: fix_hints.rs  mod.rs  render.rs
tests/: cli_output.rs  config.rs  count_command.rs  delete_command.rs  find_col_facets.rs  find_link_predicates.rs  get_command.rs  help_live_examples.rs  help_output.rs  help_plan_operation_blocks.rs  init.rs  migrate_command.rs  migration_regression.rs  move_command.rs  mutation_lock.rs  repair_apply_out_orthogonality.rs  repair_apply_stdin.rs  repair_plan_format_rejection.rs  repair_plan_out_orthogonality.rs  repair_plan_paths_format.rs  repair_plan_report_format.rs  repair_plan_skip_reason.rs  repair_surface.rs  replace_body_pass.rs  rewrite_wikilink_command.rs  set_smoke.rs  validate_links_parity.rs  vault_new.rs
(+26 files in other folders)
