[workspace]
members = [
    "crates/vault-core",
    "crates/vault-frontmatter",
    "crates/vault-links",
    "crates/vault-graph",
    "crates/vault-standards",
    "crates/vault-cache",
    "crates/vault-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.32.0"

[workspace.dependencies]
anyhow = "1.0"
blake3 = "1.5"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
camino = { version = "1.1", features = ["serde1"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
clap_complete_nushell = "4.5"
clap_mangen = "0.3"
fs2 = "0.4"
globset = "0.4"
pulldown-cmark = "0.13"
regex = "1.10"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
strsim = "0.11"
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
tempfile = "3"
terminal_size = "0.4"
thiserror = "2.0"
walkdir = "2.5"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
