# Explicit empty workspace stops Cargo from walking up into a parent
# directory's Cargo.toml (e.g., a nested git worktree on an older branch).
# Without this, cargo errors with "current package believes it's in a
# workspace when it's not" during local dev in those layouts.
[workspace]

[package]
name = "norn-run"
edition = "2021"
license = "MIT"
version = "0.33.0"
authors = ["Drew Butler <hi@dbtlr.com>"]
description = "Deterministic Markdown vault graph, link, and validation tooling for terminals and agents"
repository = "https://github.com/dbtlr/norn"
homepage = "https://github.com/dbtlr/norn"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["markdown", "obsidian", "vault", "cli", "validation"]
build = "build.rs"

[[bin]]
name = "norn"
path = "src/main.rs"

[dependencies]
anstyle = "1"
anyhow = "1.0"
blake3 = "1.5"
camino = { version = "1.1", features = ["serde1"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
clap_complete_nushell = "4.5"
clap_mangen = "0.3"
fs2 = "0.4"
globset = "0.4"
pulldown-cmark = "0.13"
regex = "1.10"
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.11"
strsim = "0.11"
tar = "0.4"
terminal_size = "0.4"
thiserror = "2.0"
ureq = { version = "2.10", default-features = false, features = ["tls", "json"] }
walkdir = "2.5"
xz2 = "0.1"

[build-dependencies]
camino = { version = "1.1", features = ["serde1"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
clap_complete_nushell = "4.5"
clap_mangen = "0.3"

[dev-dependencies]
mockito = "1.5"
tempfile = "3"

[profile.dist]
inherits = "release"
lto = "thin"
