[package]
name = "vault-cache"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
camino = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
blake3 = { workspace = true }
fs2 = { workspace = true }

vault-core = { path = "../vault-core" }
vault-graph = { path = "../vault-graph" }
vault-frontmatter = { path = "../vault-frontmatter" }
vault-links = { path = "../vault-links" }

[dev-dependencies]
tempfile = { workspace = true }
