[package]
name = "vault-cli"
edition.workspace = true
license.workspace = true
version.workspace = true
authors = ["Drew Butler <hi@dbtlr.com>"]
description = "Deterministic Markdown vault graph, link, and validation tooling"
repository = "https://github.com/dbtlr/vault-cli"
homepage = "https://github.com/dbtlr/vault-cli"
readme = "../../README.md"
categories = ["command-line-utilities"]
keywords = ["markdown", "obsidian", "vault", "cli", "validation"]
rust-version = "1.95"
build = "build.rs"

[[bin]]
name = "vault"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
camino.workspace = true
clap.workspace = true
clap_complete.workspace = true
clap_mangen.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
vault-core = { path = "../vault-core" }
vault-frontmatter = { path = "../vault-frontmatter" }
vault-graph = { path = "../vault-graph" }
vault-standards = { path = "../vault-standards" }

[build-dependencies]
camino.workspace = true
clap.workspace = true
clap_complete.workspace = true
clap_mangen.workspace = true
