[package]
name = "vault-cli"
edition.workspace = true
license.workspace = true
version.workspace = true
authors = ["Drew Butler <hi@dbtlr.com>"]
description = "Deterministic Markdown vault graph, link, and validation tooling"
repository = "https://github.com/dbtlr/vault-cli"
homepage = "https://github.com/dbtlr/vault-cli"
readme = "../../README.md"
categories = ["command-line-utilities"]
keywords = ["markdown", "obsidian", "vault", "cli", "validation"]
build = "build.rs"

[[bin]]
name = "vault"
path = "src/main.rs"

[dependencies]
anstyle = "1"
anyhow.workspace = true
blake3.workspace = true
fs2.workspace = true
globset = { workspace = true }
camino.workspace = true
chrono = { workspace = true }
clap.workspace = true
clap_complete.workspace = true
clap_complete_nushell.workspace = true
clap_mangen.workspace = true
rusqlite = { workspace = true }
serde.workspace = true
serde_json.workspace = true
regex = { workspace = true }
serde_yaml.workspace = true
sha2.workspace = true
strsim.workspace = true
tar.workspace = true
terminal_size = { workspace = true }
thiserror.workspace = true
ureq.workspace = true
vault-core = { path = "../vault-core" }
vault-frontmatter = { path = "../vault-frontmatter" }
vault-graph = { path = "../vault-graph" }
xz2.workspace = true

[build-dependencies]
camino.workspace = true
clap.workspace = true
clap_complete.workspace = true
clap_complete_nushell.workspace = true
clap_mangen.workspace = true

[dev-dependencies]
mockito.workspace = true
tempfile = "3"
