[package]
name = "vault-index"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
blake3.workspace = true
camino.workspace = true
pulldown-cmark.workspace = true
regex.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
vault-core = { path = "../vault-core" }
vault-frontmatter = { path = "../vault-frontmatter" }
walkdir.workspace = true
