[package]
name = "vault-standards"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
camino = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
vault-core = { path = "../vault-core" }
vault-graph = { path = "../vault-graph" }
